--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,11 @@
 {
   "version": 2,
   "builds": [
-    { "src": "jarvis.py", "use": "@vercel/python" }
+    {
+      "src": "jarvis.py",
+      "use": "@vercel/python",
+      "config": { "pythonVersion": "3.9" }
+    }
   ],
   "routes": [
     { "src": "/(.*)", "dest": "jarvis.py" }
